2008-04-07  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/MainLoop.swg perl/amglue/source.c
	  installcheck/Amanda_MainLoop.pl: wrap GMainLoop and the 
	  GSources defined in event.c, using an extensible model
	* common-src/event.c: check whether child_watch_source's signal
	  handler has been replaced, and issue a warning if it has.

2008-04-07  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/queueing.c: fix condition (thanks to Jean-Louis
	  Martineau)

2008-04-07  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/Makefile.am common-src/queueing-test.c: new tests
	* device-src/tests/queue_test.c device-src/tests/Makefile.am: remove
	* common-src/queueing.c: fix two bugs:
	  - spurious in-place memmove on every buffer copy
	  - silent discard of a final packet if the consumer does not
	    completely consume it
	* common-src/queueing.h: update comments
	* common-src/testutils.h: add header-protection macros

2008-04-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am installcheck/Amanda_Device.pl: Add tests
	  for Amanda::Device

2008-04-07  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: fix typos

2008-04-04  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/*.xml: Use ulink tag to link to wiki.zmanda.com.

2008-04-04  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Check last_header->type != F_UNKNOWN.

2008-04-01  Dustin J. Mitchell <dustin@zmanda.com>
	Suggested by Sunil Sawant <sunil@zmanda.com>
	* man/xml-source/amrecover.8.xml: suggest including a config in the
	  amrecover command line

2008-04-01  John Franks <jfranks@zmanda.com>
	* gnulib/regenerate/regenerate gnulib/regenerate/no-restrict.patch:
	  Patches to reapply after gnulib updates.
	* gnulib/inet_ntop.c gnulib/inet_ntop.h gnulib/string.in.h
	  gnulib/gettimeofday.c gnulib/sys_time.in.h gnulib/base64.c
	  gnulib/getaddrinfo.c gnulib/Makefile.am gnulib/base64.h
	  gnulib/getaddrinfo.h: